--- a/src/pages/SignIn/Sign.css
+++ b/src/pages/SignIn/Sign.css
@@ -28,3 +28,37 @@
   width: 170px;
   height: 130px;
 }
+
+form{
+  margin-top: 1.5em;
+  width: 90%;
+  display: flex;
+  flex-direction: column; 
+}
+
+form h1{
+  text-align: center;
+  margin-bottom: 0.5rem;
+  color: #181c2e;
+}
+
+.login input{
+  margin-top: 15px;
+  height: 35px;
+  border: 0;
+  border-radius: 7px;
+  padding: 10px;
+  font-size: 15px;
+  background-color: #fff;
+}
+
+form button{
+  height: 35px;
+  border: 0;
+  border-radius: 7px;
+  background-color: #181c2e;
+  color: #fff;
+  margin: 1rem 0;
+  font-size: 1.2em;
+}
+
