--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -51,6 +51,11 @@
   background: #121212;
 }
 
+.content{
+  margin-left: 200px;
+  padding: 1px 16px;
+}
+
 @media screen and (max-width: 700px){
   .sidebar{
     width: 100%;
@@ -58,6 +63,11 @@
     position: relative;
     background: #121212;
   }
+
+  .content{
+    margin-left: 0px;
+  }
+  
 
   .sidebar a{
     float: left;
