--- a/src/components/Title/title.css
+++ b/src/components/Title/title.css
@@ -3,8 +3,9 @@
   flex-direction: row;
   align-items: center;
   margin: 1em 0;
-  border-radius: #f8f8f8;
+  border-radius: 10px;
   padding: .8em;
+  background: #f8f8f8;
 }
 
 .title span{
