--- a/src/pages/Profile/profile.css
+++ b/src/pages/Profile/profile.css
@@ -11,7 +11,7 @@
   width: 200px;
   height: 200px;
   margin-left: 40px;
-  margin-bottom:50px ;
+  margin-bottom:50px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,16 +35,10 @@
   transform: scale(1.4);
 }
 
-.form-prifile img{
+.form-profile img{
   margin-bottom: 1em;
   border-radius: 50%;
   object-fit: cover;
-}
-
-
-.form-prifile label{
-  margin-bottom: .5em;
-  font-size: 1.4em;
 }
 
 .form-profile input, textarea, select{
