--- a/src/pages/Dashboard/dashboard.css
+++ b/src/pages/Dashboard/dashboard.css
@@ -34,3 +34,99 @@
   filter: brightness(0.9);
   transform: scale(1.1);
 }
+
+table{
+  border: 1px solid #ccc;
+  border-collapse: collapse;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  table-layout: fixed;
+}
+
+table caption{
+  font-size:1.5em;
+  margin: .5em 0 .75em;
+  color: red;
+}
+
+table tr{
+  background-color: #f8f8f8;
+  border: 1px solid #ddd;
+  padding: .35em;
+}
+
+table th, 
+table td{
+  padding: .62em;
+  text-align: center;
+}
+
+table th{
+  font-size: .85em;
+  letter-spacing: .1em;
+  text-transform: uppercase;
+}
+
+table .action{
+  border: 0;
+  padding:5px;
+  margin-right: 4px;
+  display: inline-block;
+  border-radius: 4px;
+}
+
+table td .action svg{
+  vertical-align: middle;
+}
+
+table td .badge{
+  padding: 3px;
+  border-radius: 3px;
+  color:#fff;
+}
+
+@media screen and (max-width:600px){
+  table{
+    border: 0;
+  }
+
+  table caption{
+    font-size: 1.3em;
+  }
+
+  table thead{
+    border: none;
+    clip: rect(0 0 0 0);
+    height:1px;
+    overflow: hidden;
+    padding: 0;
+    margin: -1px;
+    position: absolute;
+    width: 1px;
+  }
+
+  table tr{
+    border-bottom:3px solid #ddd;
+    display: block;
+    margin-top: .65em;
+  }
+  
+  table td{
+    border-bottom:1px solid #ddd;
+    display: block;
+    font-size: .8em;
+    text-align: right;
+  }
+
+  table td::before{
+    content: attr(data-label);
+    float:left;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+
+  table td:last-child{
+    border-bottom: 0;
+  }
+}
